# SierpinskiTriangle

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  sierpinski.py
