[tool.poetry]
name = "siepinski-triangle"
version = "0.1.0"
description = ""
authors = ["PetrFridrich <petr.fridrich.1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
